# mcpset

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: config.json.example  mcpset.targets.example.json  mcpset.templates.example.json
src/mcpset/: __init__.py  __main__.py  build_central_from_existing.py  cli.py  merge_toml.py  remove_from_toml.py
tests/: conftest.py  test_append_only.py  test_cli_commands.py
